--- a/src/app/pages/admin/type-sinister/type-sinister-list/type-sinister-list.component.html
+++ b/src/app/pages/admin/type-sinister/type-sinister-list/type-sinister-list.component.html
@@ -2,7 +2,7 @@
     <nb-card-header>
 
         <span class="title">
-            Lista de siniestro
+            Lista de dictamen
         </span>
 
         <div class="add-select">
@@ -12,7 +12,7 @@
     </nb-card-header>
 
     <nb-card-body>
-        <ng2-smart-table [settings]="settings" [source]="paragraphs" (delete)="onDeleteConfirm($event)"
+        <ng2-smart-table [settings]="settings" [source]="list" (delete)="onDeleteConfirm($event)"
             (edit)="editRow($event)">
         </ng2-smart-table>
         <mat-paginator [length]="length"
