--- a/src/app/pages/admin/clarification/clarification-list/clarification-list.component.html
+++ b/src/app/pages/admin/clarification/clarification-list/clarification-list.component.html
@@ -1,27 +1,26 @@
 <nb-card class="cat-card">
   <nb-card-header>
-
-      <span class="title">
-          Lista de aclaraciones
-      </span>
-
-      <div class="add-select">
-          <button (click)="openWindowDeductive()"nbButton status="primary">Nueva</button>
-      </div>
-
+    <span class="title">
+      Lista de deductivas
+    </span>
+    <div class="add-select">
+      <button (click)="openWindow()"nbButton status="primary">Nueva</button>
+    </div>
   </nb-card-header>
 
   <nb-card-body>
-      <ng2-smart-table [settings]="settings" [source]="deductives" (delete)="onDeleteConfirm($event)"
-          (edit)="editRow($event)">
-      </ng2-smart-table>
-      <mat-paginator [length]="length"
-             [pageSize]="pageSize"
-             [pageSizeOptions]="pageSizeOptions"
-             (page)="changesPage($event)"
-             [pageIndex] ="pageEvent.pageIndex"
-             >
-      </mat-paginator>
-
+    <ng2-smart-table 
+      [settings]="settings" 
+      [source]="clarifications" 
+      (delete)="onDeleteConfirm($event)"
+      (edit)="editRow($event)">
+    </ng2-smart-table>
+    <mat-paginator 
+      [length]="length"
+      [pageSize]="pageSize"
+      [pageSizeOptions]="pageSizeOptions"
+      (page)="changesPage($event)"
+      [pageIndex] ="pageEvent.pageIndex"
+    ></mat-paginator>
   </nb-card-body>
 </nb-card>
