--- a/src/app/pages/admin/siab-clasification/siab-clasification-list/siab-clasification-list.component.html
+++ b/src/app/pages/admin/siab-clasification/siab-clasification-list/siab-clasification-list.component.html
@@ -11,7 +11,7 @@
   <nb-card-body>
     <ng2-smart-table 
       [settings]="settings" 
-      [source]="settlements" 
+      [source]="siabClasifications" 
       (delete)="onDeleteConfirm($event)"
       (edit)="editRow($event)">
     </ng2-smart-table>
