--- a/src/app/pages/admin/fractions/fractions-detail/fractions-detail.component.html
+++ b/src/app/pages/admin/fractions/fractions-detail/fractions-detail.component.html
@@ -25,8 +25,15 @@
 
             <div class="form-group row">
                 <div class="col-md-6">
-                    <input class="styles" formControlName="normId" matInput placeholder="Norma">
-                    <label class="text-danger" *ngIf="validateFraction['normId'].hasError('pattern')"><small>Campo inválido!</small></label>
+                    <input class="styles" formControlName="normDetalle" type="text" id="normId" matInput placeholder="Norma"  [nbAutocomplete]="auto"  >
+                <nb-autocomplete #auto [activeFirst]="true" (selectedChange)="onSelectionChangeNorm($event)">
+                    <nb-option *ngFor="let option of filteredOptions$ | async" [value]="option">
+                        {{ option.norm }}
+                    </nb-option>
+                </nb-autocomplete>
+                <label class="text-danger" *ngIf="validateNorm['normId'].hasError('min')"><small>Seleccione una norma!</small></label>
+                    <!-- <input class="styles" formControlName="normId" matInput placeholder="Norma">
+                    <label class="text-danger" *ngIf="validateFraction['normId'].hasError('pattern')"><small>Campo inválido!</small></label> -->
                 </div>
                 <div class="col-md-6">
                     <input maxlength="30" class="styles" formControlName="unit" matInput placeholder="Unidad">
