--- a/src/app/auth/login.component.scss
+++ b/src/app/auth/login.component.scss
@@ -39,7 +39,7 @@ body {
 }
 .login-wrapper {
   height: 100%;
-  margin-top: 150px;
+  margin-top: 0px;
 }
 .positronx {
   text-decoration: none;
@@ -52,7 +52,9 @@ body {
   float: center;
   padding: 60px 50px 40px 50px;
   width: 100%;
-  background: #fff;
+  // background: #fff;
+  // background: #6c757d;
+  background: rgba(0,0,0,.03);
   border-radius: 10px;
   transform: scale(1);
   -webkit-transform: scale(1);
@@ -68,20 +70,24 @@ body {
   opacity: .8;
   z-index: -1;
 }
-.box:before {
-  content: "";
-  width: 100%;
-  height: 30px;
-  border-radius: 10px;
-  position: absolute;
-  top: -10px;
-  background: rgba(255, 255, 255, .6);
-  left: 0;
-  transform: scale(.95);
-  -webkit-transform: scale(.95);
-  -ms-transform: scale(.95);
-  z-index: -1;
+.active {
+  background-color: #9D2449;
+  color: white;
 }
+// .box:before {
+//   content: "";
+//   width: 100%;
+//   height: 30px;
+//   border-radius: 10px;
+//   position: absolute;
+//   top: 48px;
+//   background: rgba(255, 255, 255, .6);
+//   left: 0;
+//   transform: scale(.95);
+//   -webkit-transform: scale(.95);
+//   -ms-transform: scale(.95);
+//   z-index: -1;
+// }
 .login-wrapper .example-form {
   min-width: 100%;
   max-width: 300px;
@@ -111,4 +117,20 @@ body {
 }
 .login-wrapper .mat-form-field-appearance-legacy .mat-form-field-infix {
   padding: 0.8375em 0;
+}
+.error-snackbar {
+    background: #c00;
+    color:white;
+}
+.success-snackbar {
+    background: #198754;
+    color:white;
+}
+.warning-snackbar {
+    background: rgb(105, 101, 94);
+    color:white;
+}
+.update-snackbar {
+    background: #673ab7;
+    color: white;
 }
