--- a/src/app/pages/admin/mailbox-status/mailbox-status-list/mailbox-status-list.component.html
+++ b/src/app/pages/admin/mailbox-status/mailbox-status-list/mailbox-status-list.component.html
@@ -12,6 +12,16 @@
     </nb-card-header>
 
     <nb-card-body>
+
+        <div [formGroup]="searchForm" class="form-group row">
+            <div class="col-md-1 mt-2">
+                <label class="control-label">Buscar: </label>
+            </div>
+            <div class="col-md-4">
+              <input type="text" formControlName="text"  class="form-control" autofocus/>
+            </div>
+        </div>
+        
         <ng2-smart-table [settings]="settings" [source]="list" (delete)="onDeleteConfirm($event)"
             (edit)="editRow($event)">
         </ng2-smart-table>
