--- a/src/app/pages/admin/station/station-list/station-list.component.html
+++ b/src/app/pages/admin/station/station-list/station-list.component.html
@@ -9,6 +9,16 @@
   </nb-card-header>
 
   <nb-card-body>
+    
+    <div [formGroup]="searchForm" class="form-group row">
+      <div class="col-md-1 mt-2">
+          <label class="control-label">Buscar: </label>
+      </div>
+      <div class="col-md-4">
+        <input type="text" formControlName="text"  class="form-control" autofocus/>
+      </div>
+    </div>
+
     <ng2-smart-table 
       [settings]="settings" 
       [source]="stations" 
