--- a/src/app/pages/admin/legends/official-legends-detail/official-legends-detail.component.html
+++ b/src/app/pages/admin/legends/official-legends-detail/official-legends-detail.component.html
@@ -12,8 +12,8 @@
             <div class="form-group row">
                 <select class="form-control" formControlName="status" title="Seleccione una opción">
                     <option selected disabled>Seleccionar...</option>
-                    <option value="0" selected>Activo</option>
-                    <option value="1">Inactivo</option>
+                    <option [value]="0" selected>Activo</option>
+                    <option [value]="1">Inactivo</option>
                 </select>
             </div>
             <!-- <div class="form-group row">
