full edition in penalties and legal support

--- a/src/app/pages/admin/legal-support/legal-support-detail/legal-support-detail.component.html
+++ b/src/app/pages/admin/legal-support/legal-support-detail/legal-support-detail.component.html
@@ -8,8 +8,8 @@
                         válido!</small></label>
             </div>
             <div class="form-group row">
-                <input nbInput fullWidth formControlName="support" matInput
-                    placeholder="Sustento">
+                <textarea nbInput fullWidth formControlName="support" matInput
+                    placeholder="Sustento"></textarea>
                 <label class="text-danger" *ngIf="validateLegalSupport['support'].hasError('pattern')"><small>No
                         válido!</small></label>
             </div>
