--- a/src/app/pages/admin/offices/offices-list/offices-list.component.html
+++ b/src/app/pages/admin/offices/offices-list/offices-list.component.html
@@ -1,17 +1,22 @@
 <nb-card class="cat-card">
     <nb-card-header>
-
         <span class="title">
             Lista de despachos
         </span>
-
         <div class="add-select">
             <button (click)="openWindow()"nbButton status="primary">Nueva</button>
         </div>
-
     </nb-card-header>
 
     <nb-card-body>
+        <div [formGroup]="searchForm" class="form-group row">
+            <div class="col-md-1 mt-2">
+                <label class="control-label">Buscar: </label>
+            </div>
+            <div class="col-md-4">
+                <input type="text" formControlName="text" class="form-control" autofocus />
+            </div>
+        </div>
         <ng2-smart-table [settings]="settings" [source]="list" (delete)="onDeleteConfirm($event)"
             (edit)="editRow($event)">
         </ng2-smart-table>
