correction delete style

--- a/src/app/pages/admin/offices/offices-deail/offices-deail.component.html
+++ b/src/app/pages/admin/offices/offices-deail/offices-deail.component.html
@@ -1,7 +1,7 @@
 <nb-card>
     <nb-card-body>
         <form [formGroup]="form">
-            <div class="row" style="margin: 0px; padding: 0px;">
+            <div class="row">
                 <div class="col-md-6">
                     <div class="form-group">
                         <input nbInput fullWidth formControlName="name" placeholder="Nombre">
