--- a/src/app/pages/admin/question/question-list/question-list.component.html
+++ b/src/app/pages/admin/question/question-list/question-list.component.html
@@ -10,7 +10,7 @@
 
   <nb-card-body>
     <div [formGroup]="searchForm">
-      <label class="search-label" for="search">Search:</label>
+      <label class="search-label" for="search">Buscar:</label>
       <input nbInput formControlName="text" class="search-input">
     </div>
     <ng2-smart-table 
