--- a/src/app/pages/admin/safe/safe-list/safe-list.component.html
+++ b/src/app/pages/admin/safe/safe-list/safe-list.component.html
@@ -9,6 +9,10 @@
   </nb-card-header>
 
   <nb-card-body>
+    <div [formGroup]="searchForm">
+      <label class="search-label" for="search">Buscar:</label>
+      <input nbInput formControlName="text" class="search-input">
+  </div>
     <ng2-smart-table 
       [settings]="settings" 
       [source]="safes" 
