--- a/src/app/@theme/layouts/one-column/one-column.layout.scss
+++ b/src/app/@theme/layouts/one-column/one-column.layout.scss
@@ -7,12 +7,12 @@
     padding-top: nb-theme(layout-padding-top);
   }
 }
-nb-layout-header{
-  background-color: #0C231E !important;
-}
-nb-sidebar{
-  background-color: #0C231E !important;
-}
-.ngx-header{
-  color: white !important;
-}
+// nb-layout-header{
+//   background-color: #12322B !important;
+// }
+// nb-sidebar{
+//   background-color: #12322B !important;
+// }
+// .ngx-header{
+//   color: white !important;
+// }
