--- a/src/app/@theme/styles/_layout.scss
+++ b/src/app/@theme/styles/_layout.scss
@@ -277,5 +277,6 @@
     
 }
 .nb-theme-default nb-sidebar nb-menu {
-  margin-top: 12px !important;
+  margin-top: 28px !important;
+  margin-bottom: 28px !important;
 }
